--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,60 +1,44 @@
 /// Базовые цвета https://colorscheme.ru/color-converter.html
 
-$black:                       hsl(0, 0%, 0%);
-$white:                       hsl(0, 0%, 100%);
+$black:                       #000000;
+$white:                       #ffffff;
 
-$theme-color:                  #c0392b;
+$theme-color:                  #ffd93e;
 
 // Семантические цвета
 
-$text-color:                  #000000;
-$text-color--muted:           #424242;
+$text-color-dark:             $black;
+$text-color:                  #333333;
+$text-color--light:           #858585;
 $body-bg:                     #ffffff;
+$block-bg:                    #f7f7f7;
 
-$link-color:                  $theme-color;
-$link-color--hover:           darken($theme-color, 15%);
-
-$border-color:                #424242;
+$border-color:                #f0f0f0;
 
 // Базовая типографика
 
-$basefontSize: 16px;
+$basefontSize: 10px;
+$font-size:                   14px;
 
-$font-size:                   24px;
-$font-size--h1:               3.333em;
-$font-size--h2:               3.333em;
-$font-size--h3:               1.5em;
-$font-size--h4:               1.25em;
-$font-size--h5:               1em;
-$font-size--h6:               1em;
-$font-size--small:            0.75em;
-
-$line-height:                 1.6em;
-
-$font-family:                 'Roboto', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', 'Arial', sans-serif;
+$font-family:                 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 $font-family--serif:          'Georgia', 'Times New Roman', 'Times', serif;
 $font-family--monospace:      'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace;
 $font-family--headings:       $font-family;
 
 // Ширины
 
-$screen-mobile:               480px;
-$screen-fablet:               768px;
-$screen-tablet:               1024px;
-$screen-desktop:              1440px;
-$screen-wide-desktop:         1920px;
+$mobile:               480px;
+$fablet:               580px;
+$tablet:               1023px;
+$desktop:              1440px;
+$wide-desktop:         1920px;
 
-$container-mobile:            100%;
-$container-fablet:            100%;
-$container-tablet:            $screen-tablet - 30;
-$container-desktop:           $screen-desktop - 30;
-$container-wide-desktop:      $screen-wide-desktop - 30;
 
 // Разное
 
-$border-radius:               3px;
-$opacity:                     0.7;
-$transition-time:             0.3s;
+$border-radius:               20px;
+$opacity:                     0.6;
+$transition-time:             0.2s;
 $shadow:                      0 4px 2px -2px rgba(0, 0, 0, 0.3);
 
 $z-index-modal:               100;
