--- a/src/_include/footer.html
+++ b/src/_include/footer.html
@@ -1,3 +1,25 @@
 <footer class="footer">
-
+  <div class="container">
+    <div class="footer__inner">
+      <div class="footer__menu">
+        <ul class="list">
+          <li class="list__item">
+            <a class="link footer__link" href="#">Помощь</a>
+          </li>
+          <li class="link list__item">
+            <a class="footer__link" href="#">Обратная связь</a>
+          </li>
+          <li class="link list__item">
+            <a class="footer__link" href="#">Разработчикам</a>
+          </li>
+          <li class="link list__item">
+            <a class="footer__link" href="#">Условия использования</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__copyright copyright">
+        <span>&copy;&nbsp;2001&ndash;2017&nbsp;ООО &laquo;</span><a class="footer__link" href="#">Яндекс</a><span>&raquo;</span>
+      </div>
+    </div>
+  </div>
 </footer>
