--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -1,6 +1,69 @@
 .footer {
   position: relative;
   width: 100%;
-  height: 30px;
-  background-color: rgba(235, 29, 53, 0.62);
+  height: 60px;
+  background-color: $body-bg;
+  overflow: hidden;
+
+  @media (max-width: $mobile) {
+    padding: 20px 0;
+    height: auto;
+  }
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+
+    @media (max-width: $mobile) {
+      display: block;
+    }
+  }
+
+  &__link {
+    @include smallString($text-color--light);
+    text-decoration: none;
+    opacity: 1;
+    transition: opacity $transition-time;
+
+    &:active {
+      color: $text-color--light;
+    }
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  &__copyright {
+    position: relative;
+    margin-left: 20px;
+
+    @media (max-width: $mobile) {
+      margin-top: 10px;
+      margin-left: 0;
+    }
+  }
+}
+
+.list {
+  position: relative;
+  margin: 0;
+  padding: 0;
+
+  &__item {
+    display: inline-block;
+    margin-right: 10px;
+    list-style-type: none;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
+.copyright {
+  @include smallString($text-color--light);
+  white-space: nowrap;
 }
