[WIP] Added slider js

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,3 +8,7 @@
 @import './src/style/partials/page';
 @import './src/style/partials/header';
 @import './src/style/partials/footer';
+
+@import './src/style/partials/block';
+@import './src/style/partials/main-section';
+@import './src/style/partials/devices';
