--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: 92px;
   border-bottom: 1px solid $border-color;
+  background-color: $body-bg;
   z-index: 1;
 
   @media (max-width: $fablet) {
