--- a/src/style/partials/page.scss
+++ b/src/style/partials/page.scss
@@ -54,3 +54,27 @@ body {
     padding: 0 20px;
   }
 }
+
+.top-section {
+  display: flex;
+
+
+
+
+
+
+}
+
+.section {
+  position: relative;
+
+
+  &__title {
+
+  }
+
+  &--left {
+    flex-grow: 1;
+  }
+
+}
