Added script section

--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -31,6 +31,14 @@
       </div>
   </div>
   <div class="main-block__planned">
+    <div class="option-block">
 
+    </div>
+    <div class="option-block">
+
+    </div>
+    <div class="option-block">
+
+    </div>
   </div>
 </div>
