--- a/src/style/partials/block.scss
+++ b/src/style/partials/block.scss
@@ -1,50 +1,16 @@
-.test-slider {
-  // display: flex;
-  overflow-x: scroll;
-  max-width: 630px;
-}
+.option-block {
+  position: relative;
+  width: 200px;
+  height: 100px;
+  border-radius: $border-radius;
+  background-color: rgba(29, 181, 47, 0.5);
 
-.test {
-
-  display: flex;
-  // flex-wrap: wrap;
-  transition: transform $transition-time;
-
-
-  &__page {
-    display: flex;
-    flex-wrap: wrap;
-    flex-shrink: 0;
-    width: 630px;
-    margin-right: 15px;
-
-    &:last-child {
-      margin-right: 0;
-    }
+  @media (max-width: $desktop) {
+    width: 170px;
   }
 
-
-  &__item {
-    position: relative;
+  @media (max-width: $tablet) {
     width: 200px;
-
-    height: 100px;
-    border-radius: $border-radius;
-    background-color: rgba(184, 250, 74, 0.62);
-    margin-right: 15px;
-    margin-top: 15px;
-
-    &:nth-child(3n) {
-      background-color: red;
-      margin-right: 0;
-    }
-
-    &:nth-child(-n + 3) {
-      background-color: blue;
-      margin-top: 0;
-    }
-
-
   }
 }
 
@@ -66,7 +32,6 @@
   background-color: green;
 }
 
-
 .test2 {
 
   display: flex;
@@ -79,6 +44,5 @@
     border-radius: $border-radius;
     background-color: rgba(184, 250, 74, 0.62);
     margin-right: 15px;
-
   }
 }
