--- a/src/style/partials/page.scss
+++ b/src/style/partials/page.scss
@@ -59,17 +59,48 @@ body {
 
 .top-section {
   display: flex;
+
+  @media (max-width: $tablet) {
+    display: block;
+  }
+
+  &__left {
+    flex-grow: 1;
+    margin-right: 26px;
+    width: calc(100% - 630px - 26px);
+
+    @media (max-width: $desktop) {
+      width: calc(100% - 510px - 30px - 26px);
+    }
+
+    @media (max-width: $tablet) {
+      width: 100%;
+    }
+  }
+
+  &__right {
+    width: 630px;
+
+    @media (max-width: $desktop) {
+      width: 510px + 30px;
+    }
+
+    @media (max-width: $tablet) {
+      width: 100%;
+    }
+  }
 }
 
 .section {
   position: relative;
 
-  &__title {
-    @include titleH2($text-color);
+  &__title-wr {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  &--left {
-    flex-grow: 1;
-    margin-right: 26px;
+  &__title {
+    @include titleH2($text-color);
   }
 }
