Added planned slider

--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -30,15 +30,33 @@
         </div>
       </div>
   </div>
-  <div class="main-block__planned">
-    <div class="option-block">
+  <div class="main-block__planned planned-slider">
+      <div class="planned-slider__inner">
+        <div class="planned-slider__content">
+          <div class="planned-slider__item option-block">
 
-    </div>
-    <div class="option-block">
+          </div>
+          <div class="planned-slider__item option-block">
 
-    </div>
-    <div class="option-block">
+          </div>
+          <div class="planned-slider__item option-block">
 
+          </div>
+
+          <div class="planned-slider__item option-block">
+
+          </div>
+          <div class="planned-slider__item option-block">
+
+          </div>
+
+          <div class="planned-slider__item option-block">
+
+          </div>
+          <div class="planned-slider__item option-block">
+
+          </div>
+      </div>
     </div>
   </div>
 </div>
