--- a/src/style/partials/slider-arrows.scss
+++ b/src/style/partials/slider-arrows.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   width: 32px;
 
+  &--is-hidden {
+    display: none;
+  }
+
   &__btn {
     position: relative;
     width: 14px;
