--- a/src/style/partials/slider.scss
+++ b/src/style/partials/slider.scss
@@ -27,10 +27,13 @@
   position: relative;
   display: flex;
   overflow: auto;
+  width: calc(100% + 20px);
+  transform: translate(-10px, -10px);
 
   &__inner {
     display: flex;
     transition: transform $transition-time;
+    padding: 10px;
   }
 
   &__page {
@@ -42,7 +45,7 @@
     align-content: flex-start;
     margin-right: 15px;
 
-    @media (max-width: $tablet) {
+    @media (max-width: $desktop) {
       flex-wrap: nowrap;
       flex-shrink: unset;
       margin-right: 0;
@@ -59,14 +62,14 @@
   .slider__item {
     margin-top: 15px;
 
-    @media (max-width: $tablet) {
+    @media (max-width: $desktop) {
       margin-top: 0;
     }
 
     &:nth-child(3n) {
       margin-right: 0;
 
-      @media (max-width: $tablet) {
+      @media (max-width: $desktop) {
         margin-right: 15px;
       }
     }
