Added tuning block

--- a/src/_include/device-block.html
+++ b/src/_include/device-block.html
@@ -1,31 +1,94 @@
 <div class="device-slider slider js-device-slider">
   <div class="slider__inner">
-      <div class="slider__item option-block ">
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun">
       </div>
-      <div class="slider__item option-block ">
-
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          Xiaomi Yeelight LED Smart Bulb
+        </div>
+        <div class="tuning-block__description">
+          Включено
+        </div>
       </div>
-      <div class="slider__item option-block ">
+    </div>
 
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun-off">
       </div>
-      <div class="slider__item option-block ">
-
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          D-Link Omna 180 Cam
+        </div>
+        <div class="tuning-block__description">
+          Выключено
+        </div>
       </div>
-      <div class="slider__item option-block ">
+    </div>
 
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__temperature">
       </div>
-
-      <div class="slider__item option-block ">
-
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          Elgato Eve Degree Connected
+        </div>
+        <div class="tuning-block__description">
+          Выключено до&nbsp;17:00
+        </div>
       </div>
+    </div>
 
-      <div class="slider__item option-block ">
-
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun-off">
       </div>
-
-      <div class="slider__item option-block ">
-
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          LIFX Mini Day & Dusk A60 E27
+        </div>
+        <div class="tuning-block__description">
+          Включится в 17:00
+        </div>
       </div>
+    </div>
 
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun">
+      </div>
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          Xiaomi Mi Air Purifier 2S
+        </div>
+        <div class="tuning-block__description">
+          Включено
+        </div>
+      </div>
+    </div>
+
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun-off">
+      </div>
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          Philips Zhirui
+        </div>
+        <div class="tuning-block__description">
+          Выключено
+        </div>
+      </div>
+    </div>
+
+    <div class="slider__item tuning-block">
+      <div class="tuning-block__icon status-icon__sun">
+      </div>
+      <div class="tuning-block__content">
+        <div class="tuning-block__title">
+          Xiaomi Mi Air Purifier 2S
+        </div>
+        <div class="tuning-block__description">
+          Включено
+        </div>
+      </div>
+    </div>
   </div>
 </div>
