--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -33,28 +33,41 @@
   <div class="main-block__planned planned-slider">
       <div class="planned-slider__inner">
         <div class="planned-slider__content">
-          <div class="planned-slider__item option-block">
-
+          <div class="planned-slider__item tuning-block">
+            <div class="tuning-block__icon status-icon__temperature-off">
+            </div>
+            <div class="tuning-block__content">
+              <div class="tuning-block__title">
+                Philips Cooler
+              </div>
+              <div class="tuning-block__description">
+                Начнет охлаждать в&nbsp;16.30
+              </div>
+            </div>
           </div>
-          <div class="planned-slider__item option-block">
-
+          <div class="planned-slider__item tuning-block">
+            <div class="tuning-block__icon status-icon__sun-off">
+            </div>
+            <div class="tuning-block__content">
+              <div class="tuning-block__title">
+                Xiaomi Yeelight LED Smart Bulb
+              </div>
+              <div class="tuning-block__description">
+                Включится в&nbsp;17.00
+              </div>
+            </div>
           </div>
-          <div class="planned-slider__item option-block">
-
-          </div>
-
-          <div class="planned-slider__item option-block">
-
-          </div>
-          <div class="planned-slider__item option-block">
-
-          </div>
-
-          <div class="planned-slider__item option-block">
-
-          </div>
-          <div class="planned-slider__item option-block">
-
+          <div class="planned-slider__item tuning-block">
+            <div class="tuning-block__icon status-icon__sun">
+            </div>
+            <div class="tuning-block__content">
+              <div class="tuning-block__title">
+                Xiaomi Mi Air Purifier 2S
+              </div>
+              <div class="tuning-block__description">
+                Выключится в&nbsp;20.00
+              </div>
+            </div>
           </div>
       </div>
     </div>
