--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -1,32 +1,69 @@
 <div class="script-slider slider slider--page js-script-slider">
   <div class="slider__inner">
     <div class="slider__page">
-
-      <div class="slider__item option-block ">
+      <div class="slider__item ">
+        <div class="tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon status-icon status-icon__sun">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Выключить весь свет в&nbsp;доме и&nbsp;во&nbsp;дворе
+          </div>
+        </div>
+        </div>
       </div>
-      <div class="slider__item option-block ">
-
+      <div class="slider__item tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon status-icon status-icon__scheduled">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Я ухожу
+          </div>
+        </div>
       </div>
-
-      <div class="slider__item option-block ">
-
+      <div class="slider__item tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon status-icon status-icon__sun">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Включить свет в&nbsp;коридоре
+          </div>
+        </div>
       </div>
-      <div class="slider__item option-block ">
-
+      <div class="slider__item tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon status-icon__temperature">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Набрать горячую ванну
+          </div>
+          <div class="tuning-block__description">
+            Начнется в&nbsp;18.00
+          </div>
+        </div>
       </div>
-
-      <div class="slider__item option-block ">
-
-      </div>
-
-      <div class="slider__item option-block ">
-
+      <div class="slider__item tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon status-icon__temperature">
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Сделать пол тёплым во всей квартире
+          </div>
+        </div>
       </div>
     </div>
     <div class="slider__page">
-      <div class="slider__item option-block ">
+      <div class="slider__item tuning-block tuning-block--less-height">
+        <div class="tuning-block__icon">
 
+        </div>
+        <div class="tuning-block__content">
+          <div class="tuning-block__title">
+            Сделать пол теплым во&nbsp;всей квартире
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
 </div>
