--- a/src/style/partials/main-block.scss
+++ b/src/style/partials/main-block.scss
@@ -100,6 +100,22 @@
     height: auto;
     margin-bottom: 20px;
   }
+
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 12px;
+    width: 16px;
+    height: 16px;
+    margin-left: -6px;
+    background: svg-load('../images/img_to_bg/double-down-arrow.svg');
+
+    @media (max-width: $fablet) {
+      display: none;
+    }
+  }
 }
 
 .planned-slider__inner {
@@ -137,8 +153,6 @@
   flex-shrink: 0;
 
   &:last-child {
-    margin-bottom: 0;
-
     @media (max-width: $fablet) {
       margin-right: 0;
     }
