--- a/src/_include/device-block.html
+++ b/src/_include/device-block.html
@@ -1,7 +1,7 @@
 <div class="device-slider slider js-device-slider">
   <div class="slider__inner">
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun">
+      <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -12,9 +12,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun-off">
+      <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -25,9 +24,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__temperature">
+      <div class="tuning-block__icon status-icon status-icon--temperature">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -38,9 +36,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun-off">
+      <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -51,9 +48,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun">
+      <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -64,9 +60,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun-off">
+      <div class="tuning-block__icon status-icon status-icon--sun-off">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
@@ -77,9 +72,8 @@
         </div>
       </div>
     </div>
-
     <div class="slider__item tuning-block">
-      <div class="tuning-block__icon status-icon__sun">
+      <div class="tuning-block__icon status-icon status-icon--sun">
       </div>
       <div class="tuning-block__content">
         <div class="tuning-block__title">
