--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -34,7 +34,7 @@
       <div class="planned-slider__inner">
         <div class="planned-slider__content">
           <div class="planned-slider__item tuning-block">
-            <div class="tuning-block__icon status-icon__temperature-off">
+            <div class="tuning-block__icon status-icon status-icon--temperature-off">
             </div>
             <div class="tuning-block__content">
               <div class="tuning-block__title">
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class="planned-slider__item tuning-block">
-            <div class="tuning-block__icon status-icon__sun-off">
+            <div class="tuning-block__icon status-icon status-icon--sun-off">
             </div>
             <div class="tuning-block__content">
               <div class="tuning-block__title">
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="planned-slider__item tuning-block">
-            <div class="tuning-block__icon status-icon__sun">
+            <div class="tuning-block__icon status-icon status-icon--sun">
             </div>
             <div class="tuning-block__content">
               <div class="tuning-block__title">
