--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -3,7 +3,7 @@
     <div class="slider__page">
       <div class="slider__item ">
         <div class="tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon status-icon__sun">
+        <div class="tuning-block__icon status-icon status-icon--sun">
         </div>
         <div class="tuning-block__content">
           <div class="tuning-block__title">
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon status-icon__scheduled">
+        <div class="tuning-block__icon status-icon status-icon--scheduled">
         </div>
         <div class="tuning-block__content">
           <div class="tuning-block__title">
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon status-icon__sun">
+        <div class="tuning-block__icon status-icon status-icon--sun">
         </div>
         <div class="tuning-block__content">
           <div class="tuning-block__title">
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon__temperature">
+        <div class="tuning-block__icon status-icon--temperature">
         </div>
         <div class="tuning-block__content">
           <div class="tuning-block__title">
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon status-icon__temperature">
+        <div class="tuning-block__icon status-icon--temperature">
         </div>
         <div class="tuning-block__content">
           <div class="tuning-block__title">
