--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -51,9 +51,9 @@
 
 @mixin button($fontSize, $color, $bg-color) {
   display: inline-block;
+  width: 100%;
   height: 60px;
   padding: 0 10px;
-
   @include font($fontSize, $font-family, $fontSize);
   font-weight: 600;
   white-space: nowrap;
@@ -66,17 +66,17 @@
   cursor: pointer;
   appearance: none;
   background-color: $bg-color;
-
-  transition: background-color $transition-time ease;
+  transform: translateY(0);
+  transition: transform $transition-time;
 
   &:hover,
   &:focus {
     text-decoration: none;
-    background: rgba($bg-color, 0.9);
+    transform: translateY(-2px);
   }
 
   &:active {
-    background: rgba($bg-color, 0.9);
+    transform: translateY(0);
   }
 
   &:disabled {
