--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,6 +8,7 @@
 @import './src/style/partials/page';
 @import './src/style/partials/header';
 @import './src/style/partials/footer';
+@import './src/style/partials/popup';
 
 @import './src/style/partials/slider-arrows';
 @import './src/style/partials/filters';
