Added popup filters

--- a/src/_include/popup.html
+++ b/src/_include/popup.html
@@ -16,7 +16,20 @@
       Включено
     </div>
     <div class="popup__content">
-      Инфо
+      <div class="filters popup__filters">
+        <div class="filters__item filters__item--is-active" data-value="All">
+          Вручную
+        </div>
+        <div class="filters__item" data-value="kitchen">
+          Холодно
+        </div>
+        <div class="filters__item" data-value="kitchen">
+          Тепло
+        </div>
+        <div class="filters__item" data-value="kitchen">
+          Жарко
+        </div>
+      </div>
     </div>
   </div>
   <div class="popup__buttons-wr">
