--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,6 +10,7 @@
 @import './src/style/partials/footer';
 @import './src/style/partials/filters';
 @import './src/style/partials/range';
+@import './src/style/partials/circularSlider';
 
 @import './src/style/partials/slider-arrows';
 @import './src/style/partials/slider';
