--- a/src/_include/main-block.html
+++ b/src/_include/main-block.html
@@ -33,7 +33,7 @@
   <div class="main-block__planned planned-slider">
       <div class="planned-slider__inner">
         <div class="planned-slider__content">
-          <div class="planned-slider__item tuning-block">
+          <div class="planned-slider__item tuning-block js-open-modal" data-modal-type="temperature">
             <div class="tuning-block__icon status-icon status-icon--temperature-off">
             </div>
             <div class="tuning-block__content">
@@ -45,7 +45,7 @@
               </div>
             </div>
           </div>
-          <div class="planned-slider__item tuning-block">
+          <div class="planned-slider__item tuning-block js-open-modal" data-modal-type="lighting">
             <div class="tuning-block__icon status-icon status-icon--sun-off">
             </div>
             <div class="tuning-block__content">
@@ -57,7 +57,7 @@
               </div>
             </div>
           </div>
-          <div class="planned-slider__item tuning-block">
+          <div class="planned-slider__item tuning-block js-open-modal" data-modal-type="round">
             <div class="tuning-block__icon status-icon status-icon--sun">
             </div>
             <div class="tuning-block__content">
