--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -54,7 +54,7 @@
     </div>
     <div class="slider__page">
       <div class="slider__item tuning-block tuning-block--less-height">
-        <div class="tuning-block__icon">
+        <div class="tuning-block__icon status-icon--temperature">
 
         </div>
         <div class="tuning-block__content">
