--- a/src/_include/header.html
+++ b/src/_include/header.html
@@ -15,9 +15,9 @@
         </label>
         <div class="nav__wr">
           <nav class="nav">
-            <a class="nav__item nav__item--is-active" href="">Сводка</a>
-            <a class="nav__item" href="">Устройства</a>
-            <a class="nav__item" href="">Сценарии</a>
+            <a class="nav__item nav__item--is-active" href="#">Сводка</a>
+            <a class="nav__item" href="#">Устройства</a>
+            <a class="nav__item" href="#">Сценарии</a>
           </nav>
         </div>
       </div>
