--- a/src/_include/popup.html
+++ b/src/_include/popup.html
@@ -1,4 +1,4 @@
-<!-- <div class="popup">
+<div class="popup js-popup" id="temperatureModal">
   <div class="popup__main">
     <div class="popup__top">
       <h2 class="popup__title">
@@ -16,17 +16,17 @@
       Включено
     </div>
     <div class="popup__content">
-      <div class="filters popup__filters">
-        <div class="filters__item filters__item--is-active" data-value="All">
+      <div class="filters popup__filters js-filters-temperature">
+        <div class="filters__item filters__item--is-active" data-value="manual">
           Вручную
         </div>
-        <div class="filters__item" data-value="kitchen">
+        <div class="filters__item" data-value="-5">
           Холодно
         </div>
-        <div class="filters__item" data-value="kitchen">
+        <div class="filters__item" data-value="16">
           Тепло
         </div>
-        <div class="filters__item" data-value="kitchen">
+        <div class="filters__item" data-value="25">
           Жарко
         </div>
       </div>
@@ -37,7 +37,7 @@
         <div class="range__caption range__caption--text range__caption--right">
           +30
         </div>
-        <input class="range range--temperature" type="range" min="-10" max="30" step="1" value="17">
+        <input class="range range--temperature js-range-temperature" type="range" min="-10" max="30" step="1" value="17">
       </div>
     </div>
   </div>
@@ -45,8 +45,8 @@
     <button class="popup__button popup__apply" type="button" name="apply">Применить</button>
     <button class="popup__button popup__close" type="button" name="close">Закрыть</button>
   </div>
-</div> -->
-<!-- <div class="popup">
+</div>
+<div class="popup js-popup" id="lightingModal">
   <div class="popup__main">
     <div class="popup__top">
       <h2 class="popup__title">
@@ -61,14 +61,14 @@
       Включится в&nbsp;17:00
     </div>
     <div class="popup__content">
-      <div class="filters popup__filters">
-        <div class="filters__item filters__item--is-active" data-value="All">
+      <div class="filters popup__filters js-filters-lighting">
+        <div class="filters__item filters__item--is-active" data-value="manual">
           Вручную
         </div>
-        <div class="filters__item" data-value="day">
+        <div class="filters__item" data-value="2">
           Дневной свет
         </div>
-        <div class="filters__item" data-value="night">
+        <div class="filters__item" data-value="8">
           Вечерний свет
         </div>
       </div>
@@ -85,7 +85,7 @@
               <img src="/images/icon_sun_max.png" srcset="/images/icon_sun_max@2x.png 2x" alt="max">
           </picture>
         </div>
-        <input class="range range--lighting" type="range" min="0" max="10">
+        <input class="range range--lighting js-range-lighting" type="range" min="0" max="10">
       </div>
     </div>
   </div>
@@ -93,8 +93,8 @@
     <button class="popup__button popup__apply" type="button" name="apply">Применить</button>
     <button class="popup__button popup__close" type="button" name="close">Закрыть</button>
   </div>
-</div> -->
-<div class="popup">
+</div>
+<div class="popup js-popup" id="roundModal">
   <div class="popup__main">
     <div class="popup__top">
       <h2 class="popup__title">
@@ -139,6 +139,6 @@
     <button class="popup__button popup__close" type="button" name="close">Закрыть</button>
   </div>
 </div>
-<div class="overflow">
+<div class="overlay js-overlay">
 
 </div>
