--- a/src/style/partials/page.scss
+++ b/src/style/partials/page.scss
@@ -6,14 +6,16 @@
   -ms-overflow-style: scrollbar;
   -ms-text-size-adjust: 100%; // stylelint-disable-line  property-no-vendor-prefix
   min-width: 320px;
-  min-height: 100%;
+  height: 100%;
   overflow-x: hidden;
   background-color: $body-bg;
+  -webkit-overflow-scrolling: auto;
 
   &__inner {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    // transition: filter 0.4s;
   }
 
   &__content {
@@ -35,9 +37,8 @@ body {
   position: relative;
   background-color: #fff;
   margin: 0;
-  // min-height: 100%;
   overflow-x: hidden;
-  height: 100%;
+  -webkit-overflow-scrolling: auto;
 }
 
 .container {
