--- a/src/style/partials/popup.scss
+++ b/src/style/partials/popup.scss
@@ -4,11 +4,21 @@
   left: 50%;
   max-width: 670px;
   max-height: 100vh;
-  overflow: auto;
+  overflow: hidden;
   width: 100%;
   padding: 20px;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%) scale(0);
+  opacity: 0;
+  visibility: hidden;
   z-index: $z-index-modal;
+  transition: transform $transition-time cubic-bezier(1, 0.355, 0.61, 0.215), visibility 0s $transition-time, opacity 0s $transition-time;
+
+  &--is-open {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) translateY(-50%) scale(1);
+    transition: transform $transition-time cubic-bezier(1, 0.355, 0.61, 0.215);
+  }
 
   &__main {
     position: relative;
@@ -116,12 +126,30 @@
   }
 }
 
-.overflow {
-  position: absolute;
+.overlay {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba($grey, 0.5);
   z-index: $z-index-modal - 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s $transition-time, opacity $transition-time*2;
+
+
+  &--is-show {
+    opacity: 1;
+    visibility: visible;
+    transition: visibility $transition-time, opacity $transition-time*2;
+  }
+}
+
+.is-fixed-overlay {
+  overflow: hidden;
+}
+
+.is-blur {
+  filter: blur(3px);
 }
