Fixed burger icon and menu overlay

--- a/src/_include/header.html
+++ b/src/_include/header.html
@@ -11,7 +11,11 @@
       <div class="header__menu header-menu">
         <input id="toggle" class="header-menu__toggle" type="checkbox">
         <label class="header-menu__icon-wr" for="toggle">
-          <div class="header-menu__icon"></div>
+          <div class="header-menu__icon burger js-menu">
+            <div class="burger__line"></div>
+            <div class="burger__line"></div>
+            <div class="burger__line"></div>
+          </div>
         </label>
         <div class="nav__wr">
           <nav class="nav">
