--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -72,22 +72,8 @@
 
 .header-menu__icon {
   position: relative;
-  width: 16px;
-  height: 14px;
-  transform: scale(1);
-  background-image: url('/images/icon_list_m.png');
-  background-image: url('/images/icon_list_m.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  // TODO: сделать css-бургер
-
-  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    background-image: url('/images/icon_list_m@2x.png');
-  }
-
-  &:hover {
-    transform: scale(1.1);
-  }
+  width: 18px;
+  height: 16px;
 }
 
 .nav {
@@ -166,6 +152,38 @@
       & ~ .nav__wr .nav {
         transform: scale(1);
       }
+    }
+  }
+}
+
+.burger {
+  z-index: 10;
+  cursor: pointer;
+
+  &__line {
+    width: 100%;
+    height: 3px;
+    margin-bottom: 2px;
+    border-radius: 4px;
+    background-color: $grey;
+    transition: all 0.3s ease-in-out;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &--is-active .burger__line {
+    &:nth-child(2) {
+      opacity: 0;
+    }
+
+    &:nth-child(1) {
+      transform: translateY(5px) rotate(-45deg);
+    }
+
+    &:nth-child(3) {
+      transform: translateY(-5px) rotate(45deg);
     }
   }
 }
