Fixed sliders width

--- a/src/_include/device-block.html
+++ b/src/_include/device-block.html
@@ -1,4 +1,4 @@
-<div class="device-slider slider js-device-slider">
+<div class="device-slider slider slider--overflow js-device-slider">
   <div class="slider__inner">
     <div class="slider__item tuning-block">
       <div class="tuning-block__icon status-icon status-icon--sun">
