--- a/src/_include/script-block.html
+++ b/src/_include/script-block.html
@@ -1,4 +1,4 @@
-<div class="script-slider slider slider--page js-script-slider">
+<div class="script-slider slider slider--overflow slider--page js-script-slider">
   <div class="slider__inner">
     <div class="slider__page">
       <div class="slider__item ">
