--- a/src/style/partials/slider.scss
+++ b/src/style/partials/slider.scss
@@ -1,28 +1,3 @@
-.script-slider {
-  width: 100%;
-
-  @media (max-width: $tablet) {
-    width: calc(100% + 30px);
-  }
-
-  @media (max-width: $mobile) {
-    width: calc(100% + 20px);
-  }
-}
-
-.device-slider {
-
-  @media (max-width: $tablet) {
-    width: calc(100% + 30px);
-    max-width: calc(100% + 30px);
-  }
-
-  @media (max-width: $mobile) {
-    width: calc(100% + 20px);
-    max-width: calc(100% + 20px);
-  }
-}
-
 .slider {
   position: relative;
   display: flex;
@@ -55,6 +30,16 @@
   &__item {
     position: relative;
     margin-right: 15px;
+  }
+
+  &--overflow {
+    @media (max-width: $tablet) {
+      width: calc(100% + 40px);
+    }
+
+    @media (max-width: $mobile) {
+      width: calc(100% + 30px);
+    }
   }
 }
 
